--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -13,7 +13,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IBM Plex Serif", serif\;
-  --paragraph-font: "IBM Plex Serif", Helvetica, sans-serif;
+  --paragraph-font: :"IBM Plex Serif", serif\;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
