--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -11,12 +11,8 @@ Fonts are separated by a & */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font:.roboto-thin 
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  
-  --paragraph-font: :
+  --heading-font:"Roboto", sans-serif;
+  --paragraph-font: :"Roboto", sans-serif, Helvetica;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
