--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -2,5 +2,9 @@
     width: 100px;
 }
 .first-menu a:link, .first-menu a:visited{
-    color: orange
+    color: orange;
+}
+#hero-banner{
+    width: 100%;
+    background-image: url;
 }
