--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -6,5 +6,5 @@
 }
 #hero-banner{
     width: 100%;
-    background-image: url;
+    background-image: url('../../images/Me-in-front-of-tahiti-temple.jpg');
 }
