--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -9,7 +9,7 @@
     background-image: url('../../images/Me-in-front-of-tahiti-temple.jpg');
     background-repeat: no-repeat;
     height: 1500px }
-    /* alt tag = this is an image of me in front of the temple
+    /* alt tag = this is an image of me in front of the temple */
 #hero-image{
     display: none;
 }
