--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -6,7 +6,7 @@
 }
 #hero-banner{
     width: 100%;
-    background-image: url('../../images/Family\ rafting\ NY\ 1.jpg');
+    background-image: url('/wwr/images/Family\ rafting\ NY\ 1.jpg');
     background-repeat: no-repeat;
     background-size: contain;
     height: 600px }
