--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -17,6 +17,9 @@
     height: 600px
 }
     /* alt tag = Family rafting */
+#hero-image{
+    display: none;
+}
 .column {
     float: left;
     width: 20%;
