start on 4 next

--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .logo-img{
     width: 100px;
 }
@@ -11,10 +12,13 @@
 }
 #hero-banner{
     width: 100%;
-    background-image: url('/wwr/images/rafting-ny.jpg');
+    background-image: url('/wwr/images/Family-rafting-NY-1.jpg');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 600px
+    height: 600px;
+    block-size: 900px;
+    margin: 0 auto;
+    padding: 1px;
 }
 #hero-image{
     width:60%;
@@ -44,6 +48,12 @@
   }
   body {
     background-color: #3880C7; 
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 22px;
+    margin:0;
+    padding:0;
 }
     header {
     background-color:#38C7C7;
@@ -76,4 +86,13 @@ section{
 }
 menu{
     text-align:center;
+}
+h1{
+    text-align:center;
+}
+h2{
+    margin:0;
+}
+body p{
+    color:#38C77F;
 }
