--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -10,15 +10,33 @@
 .first-menu a:hover{
     background-color:#38C77F;
 }
+.first-menu{
+    display: inline;
+    padding: 0px 100px 0px 100px;
+    border: 2px solid #38C77F;
+}
+.homepagefirstmenu a:link, .homepagefirstmenu a:visited{
+    color: red;
+    text-align:center;
+    background-color:#38C7C7 ;
+}
+.homepagefirstmenu a:hover{
+    background-color:#38C77F;
+}
+.homepagefirstmenu{
+    padding: 0px 100px 0px 100px;
+}
 #hero-banner{
     width: 100%;
     background-image: url('/wwr/images/Family-rafting-NY-1.jpg');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size:1350px;
     height: 600px;
     block-size: 900px;
     margin: 0 auto;
     padding: 1px;
+    border: 3px solid #38C77F;
+    
 }
 #hero-image{
     width:60%;
@@ -44,7 +62,7 @@
     margin: 0 auto;
   }
   #background{
-    height: 725px;
+    height: 300px;
   }
   body {
     background-color: #3880C7; 
@@ -67,6 +85,8 @@ nav a{
 }
 footer{
     background-color: #38C77F;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a{
     text-align: center;
@@ -80,6 +100,7 @@ footer p a:hover{
 }
 .dryoarlogo-img{
     width:80px;
+    padding-top: 5px;
 }
 section{
     text-align: center;
@@ -95,4 +116,16 @@ h2{
 }
 body p{
     color:#38C77F;
+}
+.column{
+    padding: 10px 20px 20px 10px;
+}
+.card{
+    margin: 200px 0;
+}
+.card img{
+    border: 10px solid #38C77F;
+}
+main img{
+    box-sizing: border-box;
 }
