--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -1,62 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-.logo-img{
-    width: 100px;
-}
-.first-menu a:link, .first-menu a:visited{
+.first-menu a:link {
     color: red;
     text-align:center;
-    background-color:#38C7C7 ;
+    padding: 0px 22px 0px 22px; 
+}
+.first-menu a:visited{
+    color:#38C7C7;
 }
 .first-menu a:hover{
     background-color:#38C77F;
 }
 .first-menu{
     display: inline;
-    padding: 0px 100px 0px 100px;
+    margin: 15px;
+    margin-right: 60px;
     border: 2px solid #38C77F;
+    text-align: center;
 }
-.homepagefirstmenu a:link, .homepagefirstmenu a:visited{
-    color: red;
+.homepagefirstmenu a:link{
+    color: #3880C7;
     text-align:center;
-    background-color:#38C7C7 ;
+    background-color:white;
+}
+.homepagefirstmenu a:visited{
+    color:#3880C7;
 }
 .homepagefirstmenu a:hover{
     background-color:#38C77F;
+    font-size: 28px;
 }
 .homepagefirstmenu{
     padding: 0px 100px 0px 100px;
 }
 #hero-banner{
     margin: 0 auto;
-    padding: 1px;
+    padding: 0;
     border: 3px solid #38C77F;
-    
+    border-bottom-style: hidden;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+    text-align: center;
 }
 #hero-image{
-    width: 1256px;
-    height:950px;
+    width: 1254px;
+    height:960px;
+    padding: 1px 1px 0px 1px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 90px;
+    text-align: center;
 }
     /* alt tag = Family rafting */
-.column {
-    float: left;
-    width: 20%;
-    padding: 4px;
-    height:auto;
-    text-align: center;
-  }
-  .row::after {
-    content: "Socials";
-    clear: both;
-    display: table;
-    text-align: center;
-    margin:auto;
-  }
   #content{
     max-width:1600px;
     margin: 0 auto;
-  }
-  #background{
-    height: 300px;
+    padding: 1px 4px 4px 1px;
   }
   body {
     background-color: #3880C7; 
@@ -68,7 +74,13 @@
     padding:0;
 }
     header {
-    background-color:#38C7C7;
+    background-color:rgb(56,199,199,0.3);
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a{
     text-align: center;
@@ -81,23 +93,19 @@ footer{
     background-color: #38C77F;
     padding: 25px 50px;
     margin-top: 200px;
-}
-footer a{
-    text-align: center;
-    text-decoration: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p{
-    font-size: 1.2em;
+    color: black;
 }
-footer p a:hover{
-    text-decoration:underline;
-}
-.dryoarlogo-img{
-    width:80px;
+.logo{
+    width:70px;
+    padding-right:0px;
     padding-top: 5px;
-}
-section{
-    text-align: center;
+    justify-self: center;
+    align-self: center;
 }
 menu{
     text-align:center;
@@ -109,9 +117,6 @@ h1{
 h2{
     margin:0;
 }
-body p{
-    color:#38C77F;
-}
 .column{
     padding: 10px 20px 20px 10px;
 }
@@ -121,6 +126,138 @@ body p{
 .card img{
     border: 10px solid #38C77F;
 }
+main {
+    text-align: center;
+}
 main img{
     box-sizing: border-box;
+}
+section h4{
+    color:#38C7C7;
+}
+.button-box a:hover{
+    background-color:#38C77F;
+    font-size: 28px;
+}
+.book{
+   background-color: white;
+   padding: 2px 0px 2px 0px; 
+}
+.book a:link{
+    color:#3880C7;
+}
+.book a:visited{
+    color:#3880C7;
+}
+.join {
+    background-color: white;
+    text-align: center;
+    padding: 2px 0px 2px 0px;
+}
+.join a:link{
+    color:#3880C7;
+}
+.msg a:hover{
+    background-color:#38C77F;
+    font-size: 28px;
+}
+.msg p{
+    color:#38C7C7;
+    background-color:#3880C7;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: 10fr 10fr 10fr 10fr 10fr 10fr 10fr 10fr 10fr 10fr;
+}
+.card-img, .mountains{
+    width: 100%;
+}
+.card-img{
+    border: 10px solid #38C7C7;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #38C7C7;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 1/3;
+}
+.rivers-card p{
+    color:#38C77F;
+}
+.camping-card p{
+    color:#38C77F;
+}
+.rapids-card p{
+    color:#38C77F;
+}
+#mountains-background{
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #38C7C7;
+    border: 2px solid #38C7C7;
+}
+.msg{
+    grid-column: 2/10;
+    grid-row: 5/7;
+    box-shadow: 5px 5px 10px #38C7C7;
+    border: 2px solid #38C7C7;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
