--- a/ice/styles/icestyles9.css
+++ b/ice/styles/icestyles9.css
@@ -44,12 +44,13 @@ body{
         background-color: blue;
         display: grid;
         grid-template-columns: 10fr 10fr 10fr;
+        width:100%;
     }
     body{
         text-align: center;
     }
     .cityimage{
-        width: 350px;
+        width: 100%;
         height:270px;
     }
 }
