subpage rafting site week 9

--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -218,6 +218,35 @@ section h4{
     box-shadow: 5px 5px 10px #38C7C7;
     border: 2px solid #38C7C7;
 }
+.msg2{
+    grid-column: 2/10;
+    grid-row: 5/7;
+    box-shadow: 5px 5px 10px #38C7C7;
+    border: 2px solid #38C7C7;
+    padding: 20px;
+    margin: 50px 0px 100px 0px;
+}
+.msg2 a:hover{
+    background-color:#38C77F;
+    font-size: 28px;
+}
+.msg2 p{
+    color:#38C7C7;
+    background-color:#3880C7;
+}
+.subpageonecontent {
+    grid-row:7/10;
+    grid-column: 2/10;
+    box-shadow: 5px 5px 10px #38C7C7;
+    border: 2px solid #38C7C7;
+    padding: 20px;
+    margin: 0px 0px 20px 0px;
+    text-align: center;
+}
+.subpageonecontent p{
+    color:#38C7C7;
+    background-color:#3880C7;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
