--- a/wwr/styles/wireframe-style.css
+++ b/wwr/styles/wireframe-style.css
@@ -247,6 +247,28 @@ section h4{
     color:#38C7C7;
     background-color:#3880C7;
 }
+#registration-form{
+    color:black;
+    background-color: #38C77F;
+    box-shadow: 5px 5px 10px #38C7C7;
+    border: 2px solid #38C7C7;
+    margin: 90px 0px 20px 0px;
+    padding: 50px;
+    text-decoration:underline;
+}   
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
